objects/Partner_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Application__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipLabel>Partner Contracts</relationshipLabel>
        <relationshipName>Partner_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <formula>IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;Value Added Reseller (VAR)&apos;), &apos;Value Added Reseller (VAR); &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;Specialized Reseller&apos;), &apos;Specialized Reseller; &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;Cloud Partner&apos;), &apos;Cloud Partner; &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;SP as Subcontractor to Genesys&apos;), &apos;SP as Subcontractor to Genesys; &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;SP who Hires Genesys Prof Services&apos;), &apos;SP who Hires Genesys Prof Services; &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;SP (non-Subcontractor to Genesys)&apos;), &apos;SP (non-Subcontractor to Genesys); &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;Managed Service Provider (MSP)&apos;), &apos;Managed Service Provider (MSP); &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;Technology Partner&apos;), &apos;Technology Partner; &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;OEM Partner&apos;), &apos;OEM Partner; &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;Cloud Referral Partner&apos;), &apos;Cloud Referral Partner; &apos;, &apos;&apos;) +
IF(INCLUDES(Partner_Contract_Request__r.Categories__c, &apos;Other&apos;), &apos;Other; &apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Final_Approval__c</fullName>
        <inlineHelpText>Date of Final Approval by Genesys SVP, Global Partners (Dave York or designee).</inlineHelpText>
        <label>Date Of Final Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Acknowledgement_by_Partner__c</fullName>
        <label>Date of Acknowledgement by Partner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>The effective date of the Business Terms sheet.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Agreement__c</fullName>
        <label>Master Contract Agreement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Terms_and_Conditions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Business Terms</label>
        <referenceTo>Partner_Business_Terms_and_Conditions__c</referenceTo>
        <relationshipLabel>Partner Contracts</relationshipLabel>
        <relationshipName>Partner_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contract_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contract Request</label>
        <referenceTo>Partner_Contract_Request__c</referenceTo>
        <relationshipLabel>Partner Contracts</relationshipLabel>
        <relationshipName>Partner_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Primary_Contact__c</fullName>
        <formula>Application__r.Primary_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved by Legal</fullName>
                </value>
                <value>
                    <fullName>Rejected by Legal</fullName>
                </value>
                <value>
                    <fullName>Approved by Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Contract</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Partner Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>